New pictures ans jobs

--- a/NewWS/index.html
+++ b/NewWS/index.html
@@ -282,7 +282,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="682" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="685" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Cups of coffee</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
@@ -567,10 +567,10 @@
 									         <div class="panel-body">
 									            <div class="row">
 										      		<div class="col-md-6">
-										      			<p>Projects SI : </br> - Gyrostabilised turret. </br> - Study on solar panels.
+										      			<p>Projects SI : </br><ul> <li> Gyrostabilised turret. </li></br><li>Study on solar panels.</li></ul>
 										      		</div>
 										      		<div class="col-md-6">
-										      			<p>IT/Digital projects : </br> - Some games with Python. </br> - Showcase web site. .</p>
+										      			<p>IT/Digital projects : </br><ul> <li> Some games with Python. </li></br><li> Showcase web site.</li></ul></p>
 										      		</div>
 										      	</div>
 									         </div>
@@ -609,6 +609,19 @@
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
 									            <p>Currently in the first year of the Engineer cycle.</p>	
+									        </div>
+									    </div>
+									</div>
+									<div class="panel panel-default">
+									    <div class="panel-heading" role="tab" id="headingThree">
+									        <h4 class="panel-title">
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Stafforshire University - 4 monthes (Efrei 6th semester abroad).
+									            </a>
+									        </h4>
+									    </div>
+									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+									        <div class="panel-body">
+									            <p>Currently studying there.</p>	
 									        </div>
 									    </div>
 									</div>
@@ -687,6 +700,19 @@
 					               <div class="timeline-label">
 					               	<h2><a href="#">Project Manager at SEPEFREI</a> <span>Current post | Since November 2018</span></h2>
 					                  <p></br> </p>
+					               </div>
+					            </div>
+					         </article>
+
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+					            <div class="timeline-entry-inner">
+					               <div style="background-image: url(images/.png); background-size: contain; background-repeat: no-repeat;" class="timeline-icon">
+					                  <!-- <i class="icon-food"></i> -->
+					               </div>
+					               <div class="timeline-label">
+					               	<h2><a href="#">Communication Officer at Efrei Design</a> <span>Current post | Since November 2018</span></h2>
+					                  <p>- Social networks management</br>
+					                  -  </p>
 					               </div>
 					            </div>
 					         </article>
@@ -871,6 +897,66 @@
 												<div class="con" onclick="window.open('images/groups.png', '_blank');">
 													<h3><a target="_blank" href="images/groups.png">Groups managers for SiteW</a></h3>
 													<span>Coded with HTML5/CSS3/jQuerry during my traineeship. </br> - Smart pagination, dynamic search bar, sorting, checkboxes for grouped actions, etc.</span>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+										<div class="project" style="background-image: url(images/Home.png);">
+											<div class="desc">
+												<div class="con" onclick="window.open('images/Home.png', '_blank');">
+													<h3><a target="_blank" href="images/Home.png">Schedule Manager for my school's administration.</a></h3>
+													<span>Coded with HTML5/CSS3/jQuerry during my 1st year as Engineer student. </br> - Smart validation for new/edited classes (hours, < 8 a day, prof, DW groups), CSV exporting, real time schedule, 3 types of account and rights (Prof, student, admin), students managing only for admin (add, edit, delete).</span>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+										<div class="project" style="background-image: url(images/Schedule.png);">
+											<div class="desc">
+												<div class="con" onclick="window.open('images/Schedule.png', '_blank');">
+													<h3><a target="_blank" href="images/Schedule.png">Schedule Manager for my school's administration.</a></h3>
+													<span>Coded with HTML5/CSS3/jQuerry during my 1st year as Engineer student. </br> - Smart validation for new/edited classes (hours, < 8 a day, prof, DW groups), CSV exporting, real time schedule, 3 types of account and rights (Prof, student, admin), students managing only for admin (add, edit, delete).</span>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+										<div class="project" style="background-image: url(images/General.png);">
+											<div class="desc">
+												<div class="con" onclick="window.open('images/General.png', '_blank');">
+													<h3><a target="_blank" href="images/General.png">Schedule Manager for my school's administration.</a></h3>
+													<span>Coded with HTML5/CSS3/jQuerry during my 1st year as Engineer student. </br> - Smart validation for new/edited classes (hours, < 8 a day, prof, DW groups), CSV exporting, real time schedule, 3 types of account and rights (Prof, student, admin), students managing only for admin (add, edit, delete).</span>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+										<div class="project" style="background-image: url(images/Id.png);">
+											<div class="desc">
+												<div class="con" onclick="window.open('images/Id.png', '_blank');">
+													<h3><a target="_blank" href="images/Id.png">Schedule Manager for my school's administration.</a></h3>
+													<span>Coded with HTML5/CSS3/jQuerry during my 1st year as Engineer student. </br> - Smart validation for new/edited classes (hours, < 8 a day, prof, DW groups), CSV exporting, real time schedule, 3 types of account and rights (Prof, student, admin), students managing only for admin (add, edit, delete).</span>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+										<div class="project" style="background-image: url(images/Add.png);">
+											<div class="desc">
+												<div class="con" onclick="window.open('images/Add.png', '_blank');">
+													<h3><a target="_blank" href="images/Add.png">Schedule Manager for my school's administration.</a></h3>
+													<span>Coded with HTML5/CSS3/jQuerry during my 1st year as Engineer student. </br> - Smart validation for new/edited classes (hours, < 8 a day, prof, DW groups), CSV exporting, real time schedule, 3 types of account and rights (Prof, student, admin), students managing only for admin (add, edit, delete).</span>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+										<div class="project" style="background-image: url(images/Edit.png);">
+											<div class="desc">
+												<div class="con" onclick="window.open('images/Edit.png', '_blank');">
+													<h3><a target="_blank" href="images/Edit.png">Schedule Manager for my school's administration.</a></h3>
+													<span>Coded with HTML5/CSS3/jQuerry during my 1st year as Engineer student. </br> - Smart validation for new/edited classes (hours, < 8 a day, prof, DW groups), CSV exporting, real time schedule, 3 types of account and rights (Prof, student, admin), students managing only for admin (add, edit, delete).</span>
 												</div>
 											</div>
 										</div>
