extensions added for shop pictures

--- a/NewWS/index.html
+++ b/NewWS/index.html
@@ -899,7 +899,7 @@
 										</div>
 									</div>
 									<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-										<div class="project" style="background-image: url(images/shop1.png);">
+										<div class="project" style="background-image: url(images/shop1.PNG);">
 											<div class="desc">
 												<div class="con" onclick="window.open('images/shop1.png', '_blank');">
 													<h3><a target="_blank" href="images/General.png">Shopping site for a project.</a></h3>
@@ -909,7 +909,7 @@
 										</div>
 									</div>
 									<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-										<div class="project" style="background-image: url(images/shop2.png);">
+										<div class="project" style="background-image: url(images/shop2.PNG);">
 											<div class="desc">
 												<div class="con" onclick="window.open('images/shop2.png', '_blank');">
 													<h3><a target="_blank" href="images/General.png">Shopping site for a project.</a></h3>
@@ -919,7 +919,7 @@
 										</div>
 									</div>
 									<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-										<div class="project" style="background-image: url(images/shop3.png);">
+										<div class="project" style="background-image: url(images/shop3.PNG);">
 											<div class="desc">
 												<div class="con" onclick="window.open('images/shop3.png', '_blank');">
 													<h3><a target="_blank" href="images/General.png">Shopping site for a project.</a></h3>
