--- a/NewWS/index.html
+++ b/NewWS/index.html
@@ -899,10 +899,10 @@
 										</div>
 									</div>
 									<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-										<div class="project" style="background-image: url(images/shop1.PNG);">
+										<div class="project" style="background-image: url(images/Shop1.PNG);">
 											<div class="desc">
-												<div class="con" onclick="window.open('images/shop1.png', '_blank');">
-													<h3><a target="_blank" href="images/General.png">Shopping site for a project.</a></h3>
+												<div class="con" onclick="window.open('images/Shop1.png', '_blank');">
+													<h3><a target="_blank" href="images/Shop1.png">Shopping site for a project.</a></h3>
 													<span>Coded with PHP (+HTML5/CSS3/jQuerry) during my 1st year as Engineer student. </br> - Clients and brand company sides. Then companies can upload some items on the site and clients can purchase them. A facture is made and you can consult the historic.</span>
 												</div>
 											</div>
@@ -911,8 +911,8 @@
 									<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 										<div class="project" style="background-image: url(images/shop2.PNG);">
 											<div class="desc">
-												<div class="con" onclick="window.open('images/shop2.png', '_blank');">
-													<h3><a target="_blank" href="images/General.png">Shopping site for a project.</a></h3>
+												<div class="con" onclick="window.open('images/shop2.PNG', '_blank');">
+													<h3><a target="_blank" href="images/shop2.PNG">Shopping site for a project.</a></h3>
 													<span>Coded with PHP (+HTML5/CSS3/jQuerry) during my 1st year as Engineer student. </br> - Clients and brand company sides. Then companies can upload some items on the site and clients can purchase them. A facture is made and you can consult the historic.</span>
 												</div>
 											</div>
@@ -921,8 +921,8 @@
 									<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 										<div class="project" style="background-image: url(images/shop3.PNG);">
 											<div class="desc">
-												<div class="con" onclick="window.open('images/shop3.png', '_blank');">
-													<h3><a target="_blank" href="images/General.png">Shopping site for a project.</a></h3>
+												<div class="con" onclick="window.open('images/shop3.PNG', '_blank');">
+													<h3><a target="_blank" href="images/shop3.PNG">Shopping site for a project.</a></h3>
 													<span>Coded with PHP (+HTML5/CSS3/jQuerry) during my 1st year as Engineer student. </br> - Clients and brand company sides. Then companies can upload some items on the site and clients can purchase them. A facture is made and you can consult the historic.</span>
 												</div>
 											</div>
