--- a/NewWS/index.html
+++ b/NewWS/index.html
@@ -88,7 +88,8 @@
 				</div></li>
 				<li><a style="color: #cb2027 ;" href="https://www.pinterest.fr/gabinsalabert/"><i class="icon-pinterest"></i></a></li>
 				</ul>
-				<p style="color: white;"><small>&copy;Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved </br> | Salabert Gabin |</small></p>
+				<p style="color: white;"><i>Please, do not let Google traduct the page. The site is written in English.</i></br> <small>&copy;Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
+				</br> | Salabert Gabin |</small></p>
 			</div>
 		</aside>
 		<div id="colorlib-main">
@@ -238,14 +239,14 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 text-center animate-box">
+						<div class="col-md-4 text-center animate-box specificW">
 							<div class="services color-4">
 								<span class="icon">
 									<i class="icon-pencil"></i>
 								</span>
 								<div class="desc">
 									<h3>Data Modeling</h3>
-									<p>Always elaborate ULM and Use Case diagrams before starting development.</p>
+									<p>Always elaborate ULM and Use Case diagrams before starting dev.</p>
 								</div>
 							</div>
 						</div>
