--- a/NewWS/index.html
+++ b/NewWS/index.html
@@ -473,7 +473,7 @@
 				        <div class="col-md-4 col-sm-6 col-xs-12 animate-box" data-animate-effect="fadeInLeft">
 				            <article class="material-card Red">
 				                <h2>
-				                    <span>Pyhton</span>
+				                    <span>Python</span>
 				                    <strong>
 				                        <i class="fa fa-hashtag"></i>
 				                        Programming Language
